objects/SFDocumentor__Button_Collection__c.object
<CustomObject>
    <description>Collection of All Weblinks in Org</description>
    <fields>
        <fullName>SFDocumentor__Button_Id__c</fullName>
        <externalId>true</externalId>
        <label>Button Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__CreatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Button_Collections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Created_by_Name__c</fullName>
        <label>Created by Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__DisplayType__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__DurableId__c</fullName>
        <externalId>true</externalId>
        <label>DurableId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__EntityDefinitionId__c</fullName>
        <label>EntityDefinitionId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__LastModifiedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Button_Collections1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Last_Sync_Date__c</fullName>
        <label>Last SFDoc Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Link_URL__c</fullName>
        <formula>HYPERLINK(SFDocumentor__Link__c , Name ,&apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Setup Link/URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Object_Name__c</fullName>
        <label>Object Name</label>
        <referenceTo>SFDocumentor__Object_Collection__c</referenceTo>
        <relationshipName>Button_Collections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__SFDocumentorDesc__c</fullName>
        <label>SFDoc Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Used</fullName>
                </value>
                <value>
                    <fullName>Unused</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDocumentor__WebLink_Id__c</fullName>
        <externalId>true</externalId>
        <label>WebLink Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__encodingKey__c</fullName>
        <label>Encoding Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__hasMenubar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Menubar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__hasScrollbars__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Scrollbars</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__hasToolbar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Toolbar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__height__c</fullName>
        <label>Height</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__isResizable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Resizable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__linkType__c</fullName>
        <label>Link Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__masterLabel__c</fullName>
        <label>MasterLabel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__openType__c</fullName>
        <label>Open Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__position__c</fullName>
        <label>Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__requireRowSelection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require Row Selection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__showsLocation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shows Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__showsStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shows Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__width__c</fullName>
        <label>Width</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Button Collection</label>
    <listViews>
        <fullName>SFDocumentor__All</fullName>
        <columns>NAME</columns>
        <columns>SFDocumentor__linkType__c</columns>
        <columns>SFDocumentor__Object_Name__c</columns>
        <columns>SFDocumentor__SFDocumentorDesc__c</columns>
        <columns>SFDocumentor__Description__c</columns>
        <columns>SFDocumentor__Link_URL__c</columns>
        <columns>SFDocumentor__DisplayType__c</columns>
        <columns>SFDocumentor__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Button Collection</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Button Collections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>